--- a/src/data/vehicles.yaml
+++ b/src/data/vehicles.yaml
@@ -2249,7 +2249,7 @@
   rarity: 6
   hp: 2
   weapons: 6
-  notes:
+  notes: "Passengers: 6 on exterior."
   index: cf023ae2-5206-49e0-9e39-550bba0f7f56:66
   generatedId: cec17859-c3d6-4185-9f59-47e6b64580eb
 - category: Speeders
