--- a/src/data/content-status.yaml
+++ b/src/data/content-status.yaml
@@ -3877,8 +3877,8 @@
 - book: Rise of the Separatists
   resource: Adversaries
   source: The Outer Rim
-  entered: No
-  audited: No
+  entered: Yes
+  audited: Yes
 - book: Rise of the Separatists
   resource: Adversaries Armor
   source: The Outer Rim
@@ -3888,7 +3888,7 @@
   resource: Adversaries Gear
   source: The Outer Rim
   entered: Yes
-  audited: No
+  audited: Yes
 - book: Rise of the Separatists
   resource: Adversaries Weapons
   source: The Outer Rim
